Fixed website break on zoom

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,6 +280,9 @@ footer p {
   h4 {
     font-size: 1.75rem;
   }
+  .nav {
+    position: relative;
+  }
   .nav #imgChange {
     display: block;
     cursor: pointer;
@@ -308,11 +311,15 @@ footer p {
     opacity: 0;
     -webkit-transition: all 0.5s ease-in;
     transition: all 0.5s ease-in;
+    -webkit-transform: scaleX(0);
+            transform: scaleX(0);
     z-index: -1;
   }
   .nav .navbar-active {
     opacity: 1;
     right: 0px;
+    -webkit-transform: scaleX(1);
+            transform: scaleX(1);
     z-index: 0;
   }
   .hero-content p {
